--- a/2020/2020-01/2020-01-30/source/300x600.css
+++ b/2020/2020-01/2020-01-30/source/300x600.css
@@ -770,6 +770,74 @@
   }
 }
 
+/*-- zoom in bouncing--*/
+@-webkit-keyframes zoomInBouncing {
+  0% {
+    visibility: visible;
+    opacity: 0;
+    -webkit-transform: scale(0.25);
+  }
+  50% {
+    visibility: visible;
+    opacity: 0.9;
+    -webkit-transform: scale(1.35);
+  }
+  80% {
+    visibility: visible;
+    opacity: 1;
+    -webkit-transform: scale(0.89);
+  }
+  100% {
+    visibility: visible;
+    opacity: 1;
+    -webkit-transform: scale(1);
+  }
+}
+@-moz-keyframes zoomInBouncing {
+  0% {
+    visibility: visible;
+    opacity: 0;
+    -moz-transform: scale(0.25);
+  }
+  50% {
+    visibility: visible;
+    opacity: 0.9;
+    -moz-transform: scale(1.35);
+  }
+  80% {
+    visibility: visible;
+    opacity: 1;
+    transform: scale(0.89);
+  }
+  100% {
+    visibility: visible;
+    opacity: 1;
+    -moz-transform: scale(1);
+  }
+}
+@keyframes zoomInBouncing {
+  0% {
+    visibility: visible;
+    opacity: 0;
+    transform: scale(0.25);
+  }
+  50% {
+    visibility: visible;
+    opacity: 0.9;
+    transform: scale(1.35);
+  }
+  80% {
+    visibility: visible;
+    opacity: 1;
+    transform: scale(0.89);
+  }
+  100% {
+    visibility: visible;
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
 /*-------------------------------------------*/
 * {
   -webkit-box-sizing: border-box;
@@ -842,33 +910,82 @@ a {
   -moz-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
   animation: fadeIn 0.75s ease-in-out 0.5s forwards;
 }
-.frame1-icon1 {
-  background: url('./images/300x600_frame1_icon1.png') no-repeat center center;
+.frame1-icon1-bg {
+  background: url('./images/300x600_frame1_icon1_bg.png') no-repeat center center;
   background-size: 100% auto;
-  -webkit-animation: fadeInRight 0.75s ease-in-out 1s forwards;
-  -moz-animation: fadeInRight 0.75s ease-in-out 1s forwards;
-  animation: fadeInRight 0.75s ease-in-out 1s forwards;
+  -webkit-animation: fadeIn 0.75s ease-in-out 0.75s forwards;
+  -moz-animation: fadeIn 0.75s ease-in-out 0.75s forwards;
+  animation: fadeIn 0.75s ease-in-out 0.75s forwards;
 }
-.frame1-icon2 {
-  background: url('./images/300x600_frame1_icon2.png') no-repeat center center;
+.frame1-icon2-bg {
+  background: url('./images/300x600_frame1_icon2_bg.png') no-repeat center center;
   background-size: 100% auto;
-  -webkit-animation: fadeInRight 0.75s ease-in-out 1.25s forwards;
-  -moz-animation: fadeInRight 0.75s ease-in-out 1.25s forwards;
-  animation: fadeInRight 0.75s ease-in-out 1.25s forwards;
+  -webkit-animation: fadeIn 0.75s ease-in-out 0.75s forwards;
+  -moz-animation: fadeIn 0.75s ease-in-out 0.75s forwards;
+  animation: fadeIn 0.75s ease-in-out 0.75s forwards;
 }
-.frame1-icon3 {
-  background: url('./images/300x600_frame1_icon3.png') no-repeat center center;
+.frame1-icon3-bg {
+  background: url('./images/300x600_frame1_icon3_bg.png') no-repeat center center;
   background-size: 100% auto;
-  -webkit-animation: fadeInRight 0.75s ease-in-out 1.5s forwards;
-  -moz-animation: fadeInRight 0.75s ease-in-out 1.5s forwards;
-  animation: fadeInRight 0.75s ease-in-out 1.5s forwards;
+  -webkit-animation: fadeIn 0.75s ease-in-out 0.75s forwards;
+  -moz-animation: fadeIn 0.75s ease-in-out 0.75s forwards;
+  animation: fadeIn 0.75s ease-in-out 0.75s forwards;
 }
-.frame1-icon4 {
-  background: url('./images/300x600_frame1_icon4.png') no-repeat center center;
+.frame1-icon4-bg {
+  background: url('./images/300x600_frame1_icon4_bg.png') no-repeat center center;
   background-size: 100% auto;
-  -webkit-animation: fadeInRight 0.75s ease-in-out 1.75s forwards;
-  -moz-animation: fadeInRight 0.75s ease-in-out 1.75s forwards;
-  animation: fadeInRight 0.75s ease-in-out 1.75s forwards;
+  -webkit-animation: fadeIn 0.75s ease-in-out 0.75s forwards;
+  -moz-animation: fadeIn 0.75s ease-in-out 0.75s forwards;
+  animation: fadeIn 0.75s ease-in-out 0.75s forwards;
+}
+
+.frame1-icon1-content {
+  background: url('./images/300x600_frame1_icon1_content.png') no-repeat center center;
+  background-size: 100% auto;
+  
+  -webkit-transform-origin: 154px 94px;
+  -moz-transform-origin: 154px 94px;
+  transform-origin: 154px 94px;
+
+  -webkit-animation: zoomInBouncing 0.75s ease-in-out 1s forwards;
+  -moz-animation: zoomInBouncing 0.75s ease-in-out 1s forwards;
+  animation: zoomInBouncing 0.75s ease-in-out 1s forwards;
+}
+.frame1-icon2-content {
+  background: url('./images/300x600_frame1_icon2_content.png') no-repeat center center;
+  background-size: 100% auto;
+  
+  -webkit-transform-origin: 139px 225px;
+  -moz-transform-origin: 139px 225px;
+  transform-origin: 139px 225px;
+
+  -webkit-animation: zoomInBouncing 0.75s ease-in-out 1.25s forwards;
+  -moz-animation: zoomInBouncing 0.75s ease-in-out 1.25s forwards;
+  animation: zoomInBouncing 0.75s ease-in-out 1.25s forwards;
+}
+.frame1-icon3-content {
+  background: url('./images/300x600_frame1_icon3_content.png') no-repeat center center;
+  background-size: 100% auto;
+  
+  -webkit-transform-origin: 150px 372px;
+  -moz-transform-origin: 150px 372px;
+  transform-origin: 150px 372px;
+
+  -webkit-animation: zoomInBouncing 0.75s ease-in-out 1.5s forwards;
+  -moz-animation: zoomInBouncing 0.75s ease-in-out 1.5s forwards;
+  animation: zoomInBouncing 0.75s ease-in-out 1.5s forwards;
+}
+.frame1-icon4-content {
+  background: url('./images/300x600_frame1_icon4_content.png') no-repeat center center;
+  background-size: 100% auto;
+  
+  -webkit-transform-origin: 154px 509px;
+  -moz-transform-origin: 154px 509px;
+  transform-origin: 154px 509px;
+
+  -webkit-animation: zoomInBouncing 0.75s ease-in-out 1.75s forwards;
+  -moz-animation: zoomInBouncing 0.75s ease-in-out 1.75s forwards;
+  animation: zoomInBouncing 0.75s ease-in-out 1.75s forwards;
 }
 
 .frame1 {
